2010-11-25  Alan Modra  <amodra@gmail.com>

	* po/es.po: Update.

2010-11-25  Alan Modra  <amodra@gmail.com>

	PR gas/12264
	* compress-debug.c: Include config.h first.

2010-11-24  Mike Frysinger  <vapier@gentoo.org>

	* doc/as.texinfo: Refer to and include c-bfin.texi for Blackfin
	options.
	* doc/c-bfin.texi: Add markup for use in manpage generation.

2010-11-23  Sterling Augustine  <sterling@tensilica.com>

	* doc/as.texinfo: Refer to and include c-xtensa.texi for Xtensa
	options.  Move Xtensa options to proper alphabetical location.

	* doc/c-xtensa.texi: Add markup for use in manpage generation.

2010-11-23  Mingming Sun  <mingm.sun@gmail.com>

	* config/tc-mips.c (mips_cpu_info_table): Move loongson3a after sb1.

2010-11-23  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/as.texinfo: Refer to and include c-i386.texi for i386
	options.

	* doc/c-i386.texi: Add markup for use in manpage generation.

2010-11-22  Joseph Myers  <joseph@codesourcery.com>

	* doc/as.texinfo: Refer to or include c-alpha.texi for Alpha
	options.  Refer to or include c-tic6x.texi for C6X options instead
	of duplicating documentation here.
	* doc/c-alpha.texi, doc/c-tic6x.texi: Add markup for use in
	manpage generation.

2010-11-19  Alan Modra  <amodra@gmail.com>

	PR 2606
	* configure.in: Disable emulations for PE targets.
	* configure: Regenerate.

2010-11-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR gas/12181
	* config/obj-elf.c (elf_adjust_symtab) [TE_SOLARIS]: Make sy
	weak hidden.

2010-11-17  Nick Clifton  <nickc@redhat.com>

	* input-file.c (input_file_open): Check for empty input files.
	(input_file_get): Check for end of file before reading any more
	data.
	(input_file_give_next_buffer): Likewise.

2010-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-elf.c (elf_process_stab): Mark parameters as
	ATTRIBUTE_UNUSED.

2010-11-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/obj-elf.c (elf_generate_asm_lineno): New function.
	(elf_process_stab): New function.